# rasteriser

./: .gitignore  CMakeLists.txt  arguments.cpp  conanfile.txt  drawing.cpp  drawing.h  fileloader.cpp  geometry.cpp  material.cpp  readme.md  renderer.cpp  shading.cpp  swizzle.cpp
headers/: arguments.h  drawing.h  face.h  fileloader.h  geometry.h  light.h  material.h  shading.h  swizzle.h
sampledata/: Suzanne.mtl  normalmap.csv  threepoint.csv
